Fixed layout issues and replace with Bootstrap elements

--- a/res/css/index.css
+++ b/res/css/index.css
@@ -9,10 +9,6 @@
 .navbar-logo {
 	height: 32px;
 }
-.fadE {
-    background-color: white;
-    opacity: 1;
-  }
 
 .pop:hover {
 	transform: scale(1.02); 
